2005-02-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XslAttribute.cs : It does not have to probe prefix at run time.

2005-02-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XslLiteralElement.cs,
	  XslCopy.cs : Now that exclude-element-prefixes and extension-
	  element-prefixes are handled in GetNamespacesToCopy(), we could
	  just remove those collector routine. Also, literal elements were
	  still trying to output namespaces outside TryElementNamespacesOutput.

2005-02-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XslCopy.cs : According to the spec 7.5, namespace nodes should be
	  copied. Patch by Andrew Skiba.
	* XslLiteralElement.cs,
	  XslElement.cs : Change in sync with TryElementNamespacesOutput().
	* XslStylesheet.cs : version check was incorrectly done.
	  Should check empty string, not null.

2005-02-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XslMessage.cs, XslOperation.cs, XslAttribute.cs, XslComment.cs,
	  XslProcessingInstruction.cs : simplified code by using
	  XslOperation.EvaluateAsString(). It will also help optimization.

2005-02-14  Atsushi Enomoto  <atsushi@ximian.com>

	* XslApplyTemplates.cs : significant whitespace should not be regarded
	  as invalid element. Patch by Andrew Skiba.

2005-02-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XslNumber.cs : For group size, use decimal instead of integer to allow
	  such number that is larger than int.MaxValue. patch by Andrew Skiba.

2005-02-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XslForEach.cs : Don't bork at <xsl:for-each/>. Patch by Andrew Skiba.

2005-02-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XslProcessingInstruction.cs : MS.NET recovers from invalid PI name
	  (it must be both NCName and PITarget, or must be ignored). Patch by
	  Andrew Skiba.

2005-02-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTemplateContent.cs : MS.NET recovers from incorrect non-text
	  children in attribute, PI and comments. Patch by Andrew Skiba.

2004-01-17  Atsushi Enomoto  <atsushi@ximian.com>
